= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Bug Fixes::

* support toc start at value for page numbering and running content when toc is added using macro (#2489)
* fix page number of index entries in prepress book when page numbering starts at toc or after toc and toc is inserted using macro (#2487)

== 2.3.12 (2024-02-02) - @mojavelinux

Improvements::

* add combining characters to bundled fonts (#2482)

Bug Fixes::

* ensure indentation is preserved at page transition of index when media=prepress; prevents margin from shifting to the left (#2480)

=== Details

{url-repo}/releases/tag/v2.3.12[git tag] | {url-repo}/compare/v2.3.11\...v2.3.12[full diff]

== 2.3.11 (2024-01-23) - @mojavelinux

Enhancements::

* upgrade prawn-svg dependency to 0.33.x (PR #2469)

Improvements::

* extract shared `smallcaps` method from `TextTransform#smallcaps_pcdata` to make it easier to override
* assign node to `@node` instance variable on table instance to make it easer to access from Prawn::Table extension (#2471)

Bug Fixes::

* ensure color spaces are set on page before adding running content (#2477)

=== Details

{url-repo}/releases/tag/v2.3.11[git tag] | {url-repo}/compare/v2.3.10\...v2.3.11[full diff]

== 2.3.10 (2023-12-04) - @mojavelinux

Bug Fixes::

* show dot leaders in TOC entry if toclevels is increased for a given section (#2441)
* decouple tests from path of PWD (#2444)
* consider inherited styles when analyzing glyphs for fallback font support (#2463)
* add fallback character for placeholder character when using AFM font (#2453)
* don't advance image that's first child of block at top of page if image is taller than page (#2012)

=== Details
